--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "@codemirror/language": "^6.2.1",
         "@codemirror/legacy-modes": "^6.1.0",
         "@codemirror/view": "^6.1.2",
+        "@cyntler/react-doc-viewer": "^1.17.0",
         "@date-io/date-fns": "^1.3.13",
         "@emotion/react": "^11.4.1",
         "@emotion/styled": "^11.3.0",
@@ -148,7 +149,7 @@
         "react-doc-viewer": "^0.1.5",
         "react-dom": "^17.0.2",
         "react-draggable": "^4.4.3",
-        "react-dropzone": "^11.0.3",
+        "react-dropzone": "^11.7.1",
         "react-floating-button-menu": "^2.0.8",
         "react-graph-vis": "^1.0.7",
         "react-grid-layout": "^1.3.4",
