--- a/package.json
+++ b/package.json
@@ -127,6 +127,7 @@
         "react-animated-tree": "^1.0.8",
         "react-app-polyfill": "^1.0.6",
         "react-beautiful-dnd": "^13.1.1",
+        "react-big-calendar": "^1.17.1",
         "react-chartjs-2": "^2.8.0",
         "react-circular-progressbar": "^2.0.3",
         "react-codemirror": "^1.0.0",
